<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

 <TableLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:stretchColumns="*">

<TableRow>

    <Button
        android:id="@+id/btn_1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:backgroundTint="?android:attr/colorActivatedHighlight"
        android:onClick="onClick"
        android:text="@string/tel_1"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/btn_2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="onClick"
        android:text="@string/tel_2"
        android:textColor="@android:color/background_light" />
 </TableRow>
     <TableRow>

         <Button
             android:id="@+id/btn_3"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:backgroundTint="@color/colorPrimaryDark"
             android:onClick="onClick"
             android:text="@string/tel_3"
             android:textColor="@android:color/background_light" />

         <Button
             android:id="@+id/btn_4"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:backgroundTint="@android:color/holo_green_dark"
             android:onClick="onClick"
             android:text="@string/tel_4"
             android:textColor="@android:color/background_light" />
     </TableRow>
     <TableRow>

         <Button
             android:id="@+id/btn_5"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:backgroundTint="?android:attr/colorForeground"
             android:onClick="onClick"
             android:text="@string/tel_5"
             android:textColor="@android:color/background_light" />

         <Button
             android:id="@+id/btn_6"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:backgroundTint="@android:color/holo_red_dark"
             android:onClick="onClick"
             android:text="@string/tel_6"
             android:textColor="@android:color/background_light" />

     </TableRow>

 </TableLayout>

</ScrollView>